--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px;
-    width: 550px;
+    padding: 25px;
+    width: 450px;
     background: radial-gradient(circle, rgb(43, 44, 46) 10%, rgb(25, 25, 25) 93%);
     border-radius: 8px;
     box-shadow: 5px 5px 10px black;
@@ -36,7 +36,7 @@ body {
 .info {
     position: absolute;
     top: 6px;
-    right: 30px;
+    right: 10px;
     padding: 20px;
     font-size: 24px;
     color: var(--second-color);
@@ -69,7 +69,7 @@ h1 {
 .buttons {
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     margin: 20px;
 }
 
@@ -122,9 +122,9 @@ button:focus {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 500px;
-    height: 360px;
-    padding: 30px 60px;
+    width: 400px;
+    height: 380px;
+    padding: 20px 40px;
     background-color: rgb(245, 245, 245);
 }
 
